Fixed overflowing Chat

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -141,6 +141,7 @@
 .chat-message-container {
     display: flex;
     margin-bottom: 0.2em;
+    overflow-wrap: break-word;
 }
 .chat-message-container.receive {
     justify-content: flex-start;
